# skytemple-files

./: .gitignore  .gitmodules  MANIFEST.in  README.rst  conftest.py  dungeon_randomizer.py  export_maps.py  https_search.py  mypy.ini  pylint_deprecated_checker.py  pylintrc  pyproject.toml  pytest.ini  requirements.txt  run-tests-tmux.sh  run_type_checks.sh  setup.py  tox.ini
.github/workflows/: build-test-publish.yml  check-pmdsky-debug.yml  codeql-analysis.yml  publish-unit-test-results.yml  restore.yml  rom-tests.yml
dbg/: change_test_dungeon.py
docs/: 140_migration.rst  README.rst
docs/patch_packages/: README.rst  actor_loader.skypatch  example_patch.skypatch
skytemple_files/: cli_entrypoint.py  dungeon_randomizer.py  export_maps.py  extract_rom_files_to_project.py  ground_actor_randomizer.py  starter_randomizer.py  transfer_asset_data.py  user_error.py
skytemple_files/_resources/: skytemple_pmdsky_debug_symbols.yml
skytemple_files/_resources/file_api_v2/: default_file_config.yml
skytemple_files/_resources/patches/: LICENSE  README.rst
skytemple_files/_resources/ppmdu_config/: README.rst  pmd2data.xml  pmd2dungeondata.xml  pmd2scriptdata.xml  pmd2spritedata.xml  skytemple.xml
skytemple_files/_resources/ppmdu_patches/: README.rst
skytemple_files/audio/common/: __init__.py  date.py  string.py
skytemple_files/audio/dse_common/: date.py  string.py
skytemple_files/audio/smdl/: README.rst  _model.py  _writer.py  enums.py  handler.py  model.py  protocol.py  writer.py
skytemple_files/audio/swdl/: README.rst  _model.py  _model_kgrp.py  _model_pcmd.py  _model_prgi.py  _model_wavi.py  _writer.py  enum.py  handler.py  kgrp.py  model.py  pcmd.py  prgi.py  protocol.py  wavi.py  writer.py
skytemple_files/common/: bit_stream.py  cli.py  compat_13x.py  file_api_v2.py  i18n_util.py  impl_cfg.py  mail.py  nds_hashing.py  project_file_manager.py  protocol.py  rw_value.py  script_util.py  sprite_util.py  string_codec.py  task_runner.py  tiled_image.py  util.py  version_util.py  warning.py  warnings.py  xml_util.py
skytemple_files/common/config/: path.py
skytemple_files/common/dungeon_floor_generator/: generator.py
skytemple_files/common/exceptions/: outdated_patch_dependency.py
skytemple_files/common/platform_utils/: macos.py  win.py
skytemple_files/common/ppmdu_config/: README.rst  data.py  dungeon_data.py  l10n_str_generator.py  script_data.py  xml_reader.py
skytemple_files/common/spritecollab/: __init__.py  client.py  requests.py  schema.py
skytemple_files/common/test/: string_codec_test.py
skytemple_files/common/types/: data_handler.py  file_storage.py  file_types.py  hybrid_data_handler.py
skytemple_files/compression/bma_collision_rle/: README.rst  compressor.py  decompressor.py  handler.py
skytemple_files/compression/bma_layer_nrl/: README.rst  compressor.py  decompressor.py  handler.py
skytemple_files/compression/bpc_image/: README.rst  __init__.py  compressor.py  decompressor.py  handler.py
skytemple_files/compression/bpc_tilemap/: README.rst  __init__.py  compressor.py  (+2 more)
skytemple_files/compression_container/: __init__.py  base_handler.py  protocol.py
skytemple_files/container/: __init__.py
skytemple_files/data/: monster_xml.py
skytemple_files/hardcoded/: README.rst  cart_removed.py  default_starters.py  dungeon_misc.py  dungeon_music.py  dungeons.py  fixed_floor.py  fixed_floor_entities.py  ground_dungeon_tilesets.py  guest_pokemon.py  hp_items.py  icon_banner.py  iq.py  main_menu_music.py  menus.py  monster_sprite_data_table.py  personality_test_starters.py  rank_up_table.py  recruitment_tables.py  spawn_rate.py  tactics.py  text_speed.py  wifi.py
skytemple_files/patch/: README.rst  arm_patcher.py  asm_tools.py  category.py  errors.py  list_extractor.py  patches.py
skytemple_files/test/: case.py  image.py
test/: pytest.ini  requirements.txt  tox.ini
test/skytemple_files_test/: case.py  image.py  xml.py
tools/: export_ssb.py  jp_rom_offset_finder.py
(+1467 files in other folders)
