[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "skytemple-files"
version = "1.6.0b1"
authors = [
    {name = 'Marco "Capypara" Köpcke', email = "hello@capypara.de"},
    # see About dialog or GitHub contributors list for additional people.
]
description = "Python library to edit the ROM of Pokémon Mystery Dungeon Explorers of Sky"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["rom hacking", "game modding", "skytemple"]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pmdsky-debug-py == 8.0.4",
    "ndspy >= 3.0.0",
    "pyyaml >= 6.0.0",
    "range-typed-integers >= 1.0.1",
    "Pillow >= 6.1.0",
    "appdirs >= 1.4.0",
    "explorerscript >= 0.1.3",
    "skytemple-rust >= 1.6.0b1, < 1.7.0",
    'pyobjc==9.2; sys_platform == "darwin"',
    "dungeon-eos==0.0.5",
    'typing_extensions >= 3.9; python_version < "3.9"',
    'importlib_resources>=1.3; python_version < "3.9"',
]

[project.urls]
Homepage = "https://skytemple.org"
Announcements = "https://blog.skytemple.org"
Documentation = "https://wiki.skytemple.org"
Repository = "https://github.com/SkyTemple/skytemple-files.git"
Issues = "https://github.com/SkyTemple/skytemple-files/issues"
Discord = "https://discord.gg/skytemple"

[project.optional-dependencies]
spritecollab = [
    "gql[aiohttp] >= 3.3.0",
    "graphql-core >= 3.2.0",
    # TODO: Add speedups extra again if cchardet is no longer required by it
    "aiohttp >= 3.8.0",
    "lru-dict >= 1.1.8",
]

[project.scripts]
skytemple_export_maps = "skytemple_files.export_maps:main"
